add spring instrument jar wrapper targets for sql targets